--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,7 @@ body {
   display: flex;
   min-height: 100vh;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
 }
 
